sprint_1/04-relative-positioning/styles/style.css
/* подключаем шрифты к странице директивой @font-face,
разберёмся в следующем спринте */

@font-face {
  font-family: PTMono;
  src: url(https://code.s3.yandex.net/web-code/fonts/PTMono-Regular.woff);
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: Lora;
  src: url(https://code.s3.yandex.net/web-code/fonts/Lora-Regular.woff);
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Playfair Display";
  src: url(https://code.s3.yandex.net/web-code/fonts/PlayfairDisplay-Bold.woff);
  font-weight: 700;
  font-style: bold;
}

/* свойства, установленные для всей видимой
в браузере части страницы */

.page {
  margin: 0; /* сбрасываем отступы браузера */
  padding: 120px 0; /* внутренние отступы сверху и снизу по 120 пикселей, справа и слева нулевые */
  color: white; /* цвет текста - белый */
  font-family: Lora, serif; /* шрифт, кроме оговорённых отдельно случаев, —  'Lora' */
  background-color: #161819; /* страница имеет тёмный фон */
}

.menu ul {
  padding: 0; /* сбрасываем внутренний отступ, унаследованный от браузера */
  list-style-type: none; /* убираем точки возле маркированного списка в меню */
}

/* контент всей веб-страницы занимает 40 процентов
ширины окна просмотра, располагается по центру */

.content {
  width: 40%;
  margin: auto;
}

/* общее свойство заголовков — всей страницы, глав,
разделов и подразделов — особый шрифт */

.content__title {
  font-family: "Playfair Display", serif;
}

/* свойства заголовка всей страницы */

.content__title_item_main {
  margin-bottom: 60px;
  color: #f66;
  font-size: 55px;
  line-height: 70px;
}

/* свойства названий глав и разделов */

.content__title_item_sub {
  width: 50%;
  margin: 120px 0 60px;
  color: #f66;
  font-size: 55px;
  line-height: 70px;
}

/* свойства заголовков подразделов */

.content__title_item_method {
  margin: 60px 0 20px;
  font-size: 40px;
  line-height: 50px;
}

/* свойства текста обычного абзаца */

.content__text {
  margin-bottom: 60px;
  font-size: 24px;
  line-height: 36px;
}

/* свойства текста цитат */

.content__quote {
  position: relative;
  top: 5px;
  left: 60px;
  margin: 0 0 60px;
  border-top: 2px solid #f66;
  border-bottom: 2px solid #f66;
  padding: 40px;
  font-size: 34px;
  line-height: 42px;
}

/* свойства текста с указанием источника цитаты */

.content__quote-origin {
  display: block;
  margin-top: 52px;
  margin-right: -40px;
  color: #a6a6a6;
  font-size: 22px;
  text-align: right;
}

/* далее следуют правила для меню и его пунктов;
нам предстоит прописать их по мере изучения позиционирования */

.menu__item {
  position: fixed;
}

.menu__item_theme_landscape {
  top: 40px;
  left: 40px;
}

.menu__item_theme_portrait {
  top: 40px;
  right: 40px;
}

.menu__item_theme_viewpoint {
  bottom: 40px;
  left: 40px;
}

.menu__item_theme_expression {
  right: 40px;
  bottom: 40px;
}

/* общие свойства всех ссылок меню на другие разделы сайта */

.menu__link {
  color: #a6a6a6;
  font-family: PTMono, sans-serif;
  font-size: 16px;
  text-decoration: none;
  text-transform: uppercase;
}

/* изменение цвета ссылки на другой раздел сайта по наведении указателя мыши */

.menu__link:hover {
  color: #f66;
}

/* общие свойства всех иллюстраций, всплывающих рядом с соответствующим
пунктом меню: при бездействии пользователя они скрыты */

.menu__picture {
  position: absolute;
  display: none;
  width: 300px;
}

/* далее следуют правила для всплывающих иллюстраций;
нам предстоит прописать их в процессе прохождения этого курса */

.menu__picture_theme_landscape {
}

.menu__picture_theme_portrait {
}

.menu__picture_theme_viewpoint {
}

.menu__picture_theme_expression {
}

.menu__item:hover .menu__picture {
  display: block;
}

/* общие свойства контейнеров с обычными иллюстрациями в тексте */

.content__image {
  position: relative;
  margin: 60px 0;
}

/* общие свойства иллюстраций в тексте */

.content__image-item {
  width: 100%;
}

/* общие свойства "покрывал" для иллюстраций при бездействии пользователя */

.content__image-cover {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  opacity: 0;
  background-color: rgb(0 0 0/0.3);
}

/* изменения свойств "покрывала" при наведении мыши на иллюстрации в тексте */

.content__image-cover:hover {
  opacity: 1;
}

/* свойства подписей с названиями иллюстраций */

.content__image-name {
  position: absolute;
  bottom: 10px;
  right: 10px;
  font-size: 14px;
}

/* свойства контейнера с информацией об авторах и авторских правах */

.content__item_type_copyright {
  margin-top: 40px;
  color: #a6a6a6;
  font-size: 22px;
  line-height: 30px;
}

/* свойства текста строки с информацией об авторе */

.content__text_type_copyright {
  margin-bottom: 0;
  font-size: 16px;
  line-height: 24px;
}

